<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<name>lime-java-core-parent</name>
	<description>Wultra - Core Java Libraries</description>
	<groupId>io.getlime.core</groupId>
	<artifactId>lime-java-core-parent</artifactId>
	<version>1.7.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<inceptionYear>2017</inceptionYear>
	<url>https://wultra.com/</url>

	<organization>
		<name>Wultra s.r.o.</name>
		<url>https://wultra.com/</url>
	</organization>

	<licenses>
		<license>
			<name>Apache 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https://github.com/wultra/lime-java-core.git</connection>
		<developerConnection>scm:git:https://github.com/wultra/lime-java-core.git</developerConnection>
		<url>https://github.com/wultra/lime-java-core</url>
	</scm>

	<developers>
		<developer>
			<name>Petr Dvorak</name>
			<email>petr@wultra.com</email>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<modules>
		<module>annotations</module>
		<module>audit-base</module>
		<module>http-common</module>
		<module>rest-model-base</module>
		<module>rest-client-base</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<!-- Dependencies -->
		<spring-boot.version>3.0.5</spring-boot.version>
		<findbugs-annotations.version>3.0.1u2</findbugs-annotations.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<failOnError>false</failOnError>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-banned-dependencies</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<bannedDependencies>
									<excludes>
										<!-- Force switching to Jakarta EE -->
										<exclude>javax.*</exclude>
										<!-- already on application server or servlet container -->
										<exclude>jakarta.servlet:jakarta.servlet-api:*</exclude>
										<exclude>jakarta.servlet.jsp:jakarta.servlet.jsp-api:*</exclude>
										<!-- replaced by jakarta -->
										<exclude>com.sun.mail</exclude>
										<exclude>com.sun.xml.bind</exclude>
									</excludes>
									<includes>
										<!-- Jakarta API are allowed to be provided -->
										<include>jakarta.*:*:jar:*:provided</include>
										<!-- Not yet migrated to Jakarta -->
										<include>javax.cache:*</include>
									</includes>
								</bannedDependencies>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.kohsuke</groupId>
						<artifactId>pgp-maven-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>disable-java8-doclint</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>
			<properties>
				<additionalparam>-Xdoclint:none</additionalparam>
			</properties>
		</profile>
		<profile>
			<id>internal-repository</id>
			<activation>
				<property>
					<name>useInternalRepo</name>
					<value>true</value>
				</property>
			</activation>
			<properties>
			</properties>
			<distributionManagement>
				<repository>
					<id>jfrog-central</id>
					<name>Wultra Artifactory-releases</name>
					<url>https://wultra.jfrog.io/artifactory/internal-maven-repository</url>
				</repository>
				<snapshotRepository>
					<id>jfrog-central</id>
					<name>Wultra Artifactory-snapshots</name>
					<url>https://wultra.jfrog.io/artifactory/internal-maven-repository</url>
				</snapshotRepository>
			</distributionManagement>
			<repositories>
				<repository>
					<id>jfrog-central</id>
					<name>Wultra Artifactory-releases</name>
					<url>https://wultra.jfrog.io/artifactory/internal-maven-repository</url>
				</repository>
				<repository>
					<id>ossrh-snapshots</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
					<releases>
						<enabled>false</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
				</repository>
			</repositories>
		</profile>
		<profile>
			<id>public-repository</id>
			<activation>
				<property>
					<name>!useInternalRepo</name>
				</property>
			</activation>
			<properties>
			</properties>
			<distributionManagement>
				<snapshotRepository>
					<id>ossrh-snapshots-distribution</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
				</snapshotRepository>
				<repository>
					<id>ossrh-staging-distribution</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
			</distributionManagement>
		</profile>
	</profiles>

</project>
